--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-streamlit
-pyrebase
-firebase-admin
-oauth2client
-pycryptodome  # Add this to replace pycrypto if necessary
-pyrebase4
-setuptools
+streamlit==1.22.0  # Specify your Streamlit version
+requests==2.28.1    # Example of specifying a version
+pyrebase4==4.5.0    # Example version for Pyrebase
+firebase-admin==5.3.0 # Example version for Firebase Admin
