--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit==1.10.0  # Replace with your desired Streamlit version
-pyrebase4==4.5.0   # Replace with your desired Pyrebase version
-firebase-admin==5.2.0  # Replace with your desired Firebase Admin version
-requests-toolbelt==0.9.1  # Replace with a compatible version
+streamlit==1.24.0          # Replace with the latest version if necessary
+pyrebase4==4.5.0           # Replace with the latest version if necessary
+firebase-admin==5.6.0      # Replace with the latest version if necessary
+requests_toolbelt==0.9.1
+altair==4.2.0              # Replace with the latest version if necessary
