--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit==1.24.0          # Replace with the latest version if necessary
-pyrebase4==4.5.0           # Replace with the latest version if necessary
-firebase-admin==5.6.0      # Replace with the latest version if necessary
-requests_toolbelt==0.9.1
-altair==4.2.0              # Replace with the latest version if necessary
+streamlit==1.24.0
+pyrebase4==4.5.0
+firebase-admin==6.5.0
+altair
